part-3/303/logoutput_pingpong/manifests/logoutput.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: my-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: config
          configMap:
            name: app-configs
            items:
              - key: .env
                path: ".env"
        - name: data-pv
          persistentVolumeClaim:
            claimName: data-claim
      containers:
        - name: pingpong-image
          imagePullPolicy: Always
          image: PROJECT/IMAGE-PINGPONG
        - name: log-output
          imagePullPolicy: Always
          image: PROJECT/IMAGE-LOG-OUTPUT
          volumeMounts:
            - mountPath: "/config"
              name: config
              readOnly: true
            - mountPath: /usr/src/app/files
              name: data-pv
