part-3/303/logoutput_pingpong/manifests/logoutput_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: my-project
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3333
      protocol: TCP
  selector:
    app: log-output
---
