part-3/303/logoutput_pingpong/manifests/pingpon_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: my-project
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 5555
      protocol: TCP
  selector:
    app: log-output
---
